# htmx-profile-picture-maker

./: README.md  docker-compose.yml
.github/workflows/: rex-deployment.yml
api/: .gitignore  Dockerfile  Makefile  go.mod  go.sum  main.go
web/: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  Trunk.toml  index.css  index.html
web/src/: app.rs  drag_thingy.rs  footer.rs  header.rs  main.rs
web/src/editor/: mod.rs  moveable_image.rs  picture_picker.rs
web/tailwindcss/: package-lock.json  tailwind.config.js
