[package]
name = "htmx-profile-picture-maker"
version = "0.1.0"
edition = "2021"
description = "TODO: Fill this out"
readme = "README.md"
repository = "https://github.com/mbaraa/htmx-profile-picture-maker"
license = "MIT OR Apache-2.0 AND GPL-3.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.89"
yew-hooks = "0.3.0"
js-sys = "0.3.66"
gloo = "0.10.0"
gloo-net = "0.5.0"

[dependencies.web-sys]
version = "0.3.66"
features = [
  'CssStyleDeclaration',
  'ClientRectsAndTexts',
  'Document',
  'DomRect',
  'DomRectInit',
  'DomRectList',
  'DomRectReadOnly',
  'Element',
  'EventTarget',
  'HtmlDivElement',
  'HtmlElement',
  'HtmlLinkElement',
  'Headers',
  'MouseEvent',
  'Node',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

